--- a/css/styles.css
+++ b/css/styles.css
@@ -50,12 +50,30 @@ h6 {
   max-width: 40em;
 }
 
+/* .wh {
+  width: 600px; 
+  height:600px;
+  position: absolute;
+  top: 120.5%;
+  left: 61.5%;
+  transform: translate(-50%, -50%);
+} */
+
+input {
+  background-color: rgb(0, 255, 255, 0.5);
+  width: 800px;
+  height: 200px;
+  box-shadow: 4px 8px 10px rgb(0, 0, 0);
+  font-size: 24px;
+  text-align: center;
+}
+
 .answer {
   color: rgb(255, 255, 255);
   text-transform: uppercase;
   margin: 0;
   position: absolute;
-  top: 18.5%;
+  top: 18%;
   left: 40.5%;
   width: 150px;
   font-size: 200%;
@@ -63,6 +81,10 @@ h6 {
   height: 150px;
   font-weight: bold;
 }
+
+/* .hidden {
+  display:none;
+} */
 
 .hide {
   opacity: 0;
@@ -128,4 +150,9 @@ p {
 .fa-hands-praying {
   color: rgb(34, 9, 63);
   text-shadow: 3px 3px 3px rgb(255, 255, 255);
+}
+
+.fa-atom {
+  color: rgb(0, 0, 0);
+  text-shadow: 3px 3px 3px rgb(49, 112, 143);
 }
