--- a/css/magic8ball.css
+++ b/css/magic8ball.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(34, 9, 63, 0.3) url("../img/m8b\ stars.avif") no-repeat center;
+    background: rgb(49, 112, 143, 0.5);
   }
   
   .page {
@@ -26,7 +26,7 @@ body {
     font-size: 60px;
     font-size: 2em;
     color: rgb(34, 9, 63);
-    text-shadow: 0px 0px;
+    text-shadow: 1px 1px rgb(255, 255, 255);
     font-weight: bolder;
   }
   
@@ -41,6 +41,22 @@ body {
     text-shadow: 4px 4px rgb(34, 9, 63);
   }
   
+  .parallax {
+    /* The image used */
+    background-image: url("../img/m8b\ water.avif");
+  
+    /* Set a specific height */
+    min-height: 100%; 
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+  }
+
   .ball {
     position: relative;
   }
@@ -60,7 +76,7 @@ body {
   }
   
   input {
-    background-color: rgb(0, 255, 255, 0.5);
+    background-color: rgb(49, 112, 143, 0.5);
     width: 800px;
     height: 200px;
     box-shadow: 4px 8px 10px rgb(0, 0, 0);
